--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,23 +5,18 @@ JWT_EXPIRES_IN=1h
 NODE_ENV=development
 FRONTEND_URL=http://localhost:5173
 
-# Google OAuth 2.0
-# Obtenez ces valeurs depuis Google Cloud Console:
-# https://console.cloud.google.com/apis/credentials
 GOOGLE_CLIENT_ID=YOUR_GOOGLE_CLIENT_ID.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=YOUR_GOOGLE_CLIENT_SECRET
 GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
 
-# Discord OAuth 2.0
-# Obtenez ces valeurs depuis Discord Developer Portal:
-# https://discord.com/developers/applications
 DISCORD_CLIENT_ID=YOUR_DISCORD_CLIENT_ID
 DISCORD_CLIENT_SECRET=YOUR_DISCORD_CLIENT_SECRET
 DISCORD_CALLBACK_URL=http://localhost:3000/auth/discord/callback
 
-# GitHub OAuth 2.0
-# Obtenez ces valeurs depuis GitHub Developer Settings:
-# https://github.com/settings/developers
 GITHUB_CLIENT_ID=YOUR_GITHUB_CLIENT_ID
 GITHUB_CLIENT_SECRET=YOUR_GITHUB_CLIENT_SECRET
 GITHUB_CALLBACK_URL=http://localhost:3000/auth/github/callback
+
+MICROSOFT_CLIENT_ID=YOUR_MICROSOFT_CLIENT_ID
+MICROSOFT_CLIENT_SECRET=YOUR_MICROSOFT_CLIENT_SECRET
+MICROSOFT_CALLBACK_URL=http://localhost:3000/auth/microsoft/callback
