--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,8 @@
     "mongodb": "^6.3.0",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "passport-microsoft": "^2.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
